--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "axios": "^0.18.0"
+    "axios": ">=0.18.1",
+    "lodash": ">=4.17.12"
+
   }
 }
